<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewHandler"
                type="com.android.example.presentation.home.OnClickCallback" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@drawable/background_main"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="100dp"
                android:background="@drawable/bg_button_green"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/white"
                android:text="@string/main_call_list"
                android:onClick="@{(v)-> viewHandler.onButtonClick(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCall"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button_green"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/white"
                android:text="@string/main_buy_list"
                android:onClick="@{(v)-> viewHandler.onButtonClick(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBuy"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button_green"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/white"
                android:text="@string/main_sell_list"
                android:onClick="@{(v)-> viewHandler.onButtonClick(v)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
